--- a/css/style.css
+++ b/css/style.css
@@ -95,16 +95,22 @@ div ul li{
 }
 .centrarimagen{
     margin: 50px;
-    width: 450px;
+    width: 270px;
     margin-left: 470px;
     
 }
 .centrarimagen1{
     margin: 50px;
-    width: 450px;
+    width: 350px;
     margin-left: 470px;
     
 }
+.centrarimagen2{
+
+    width: 250px;
+    margin-left: 40%;
+}
+
 .menu{
     display: inline;
     
@@ -260,12 +266,11 @@ form{
     margin-top: 20px;
     margin-left: 15px;
 }
-iframe
 .grid-galeria{
-    display: grid;
-    grid-template-columns: 50% auto;
-    justify-content:flex-start;
-    margin: 50px 20px 50px 0px;
+        display: grid;
+        grid-template-columns: 50% auto;
+        margin: 50px 20px 50px 0px;
+        
 }
 .redes{
     width: 150px;
@@ -313,42 +318,52 @@ footer p{
         grid-template-rows: repeat(2, 1fr);
         align-self: center;
         width:30rem;
-        
+        margin-left: 10%;
     }
     .pie-de-video{
         font-size: 18px;
         margin:20px 15px 18px 15px;
     }
     .formulario{
-       justify-self: center;
+       margin-left: 150px;
+    }
+    .titulo3{
+        display: none;
     }
     .galeria-fotos{
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(4, 1fr);
-        margin: 0;
-        padding: 0;
-    }
-    .fotos1{
         display: none;
+       grid-template-columns: 1fr;
+       grid-template-rows: repeat(9, 1fr);
     }
-    .fotos2{
+    .fotos{
         width: 200px;
     }
-    .fotos3{
-        width: 200px;
+    .centrarimagen{
+        margin: 15px;
+        width: 270px;}
+
+    .centrarimagen1{
+        margin-left: 200px;
     }
-    .fotos4{
-        display: none;
+    .selvanegra{
+        width: 250px;
+        align-self: center;
+        margin-left: 60%;
     }
-    
-    
+    .alfajor{
+        width: 250px;
+    }
+    .chipa{
+        width: 250px;
+        margin-right: 5px;
         
     }
+}
 @media screen and (max-width: 500px){
     .tarjetas{
         grid-template-columns: 1fr;
         grid-template-rows: repeat(2, 2fr);
-        margin-left: 20px;
+        margin-left: 70px;
     }
     header{
         width: 100%;
@@ -381,11 +396,11 @@ footer p{
    .grid-galeria{
     grid-template-columns: 1fr;
     grid-template-rows: repeat(2, 2fr);
+    margin: 50px 20px 50px 0px; ;
    }
    .galeria-fotos{
     display: none;
-
-   }
+    }
    .titulo3{
     display: none;
    }
@@ -396,8 +411,22 @@ footer p{
     width:350px ;
     margin-left: 75px;
    }
- .centrarimagen{
-    width: 450px;
-    margin-left: 5px;
- }
+ .selvanegra{
+    width: 200px;
+    margin-left: 45%;
+    }
+ .alfajor{
+    width: 250px;
+    }
+ .chipa{
+    width: 200px;
+   margin-left: 0;
+    }
+ .formulario{
+    margin-left: 0%;
+    width: ;
+    }
+ form{
+    width: 85%;
+    }
 }
